Set body to have an overflow of hidden on the x axis - avoid scrollbar

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -2,6 +2,7 @@
 
 body,
 html {
+  overflow-x: hidden;
   margin: 0;
 }
 
